--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# data
+breast_cancer_data/
+
+# test notebook
+pipeline_test.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
