--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # Configuration file for the EnsembleFeatureSelection pipeline
 #
-# Specify parameters for the pipeline below:
+# Specify parameters for the pipeline below in the value line:
 
 classifier:
   value: "RF"
@@ -32,5 +32,5 @@ result_path:
   description: "The path to save the results."
 
 experiment_name:
-  value: "test.txt"
+  value: "test"
   description: "The file name to save the results."
