--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ classifier:
   valid_values: ["RF", "naiveBayes", "bagging"]
 
 fs_methods:
-  value: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_random_forest"]
+  value: ["feature_selection_xgboost", "feature_selection_mutual_info", "feature_selection_random_forest", "feature_selection_f_statistic"]
   description: "List of feature selection methods to use. You can choose one or more methods."
   valid_values: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_svm", "feature_selection_random_forest", "feature_selection_xgboost", "feature_selection_rfe_rf"]
 
@@ -18,7 +18,7 @@ merging_strategy:
   valid_values: ["merging_strategy_union_of_pairwise_intersections", "merging_strategy_kemeny_young"]
 
 num_repeats:
-  value: 3
+  value: 10
   description: "The number of repeats for the pipeline."
   min_value: 1
   max_value: 10
