--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,17 @@ jobs:
         with:
           python-version: '3.11'  # Specify your Python version here
 
-      - name: Install R
-        uses: r-lib/actions/setup-r@v1
-        with:
-          r-version: '4.x'  # Specify the R version you want to install
-
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          Rscript -e 'install.packages("stabm", lib="R-packages")'  # Install the stabm R package into the "R-packages" directory
+        run: pip install -r requirements.txt
+        
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+          with:
+            packages: |
+              any::stabm 
 
       - name: Run tests
         run: pytest
