--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
+        args: ["--line-length", "79"]
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
