--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,7 +1,12 @@
 name: Flake8 Check
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   flake8:
     name: Run Flake8
