override config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ classifier:
   valid_values: ["RF", "naiveBayes", "bagging"]
 
 fs_methods:
-  value: ["feature_selection_xgboost", "feature_selection_mutual_info", "feature_selection_random_forest", "feature_selection_f_statistic"]
+  value: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_svm"]
   description: "List of feature selection methods to use. You can choose one or more methods."
   valid_values: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_svm", "feature_selection_random_forest", "feature_selection_xgboost", "feature_selection_rfe_rf"]
 
@@ -18,9 +18,9 @@ merging_strategy:
   valid_values: ["merging_strategy_union_of_pairwise_intersections", "merging_strategy_kemeny_young"]
 
 num_repeats:
-  value: 10
+  value: 1
   description: "The number of repeats for the pipeline."
-  min_value: 1
+  min_value: 2
   max_value: 10
 
 normalize:
@@ -33,7 +33,7 @@ task:
   description: "ML task, either regression or classification"
 
 data_path:
-  value: "/data/input/Data/"
+  value: "/data/input/"
   description: "The path to the data folder."
 
 result_path:
