--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ classifier:
   valid_values: ["RF", "naiveBayes", "bagging"]
 
 fs_methods:
-  value: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_svm"]
+  value: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_svm", "feature_selection_random_forest"]
   description: "List of feature selection methods to use. You can choose one or more methods."
   valid_values: ["feature_selection_f_statistic", "feature_selection_mutual_info", "feature_selection_svm", "feature_selection_random_forest", "feature_selection_xgboost", "feature_selection_rfe_rf"]
 
@@ -18,7 +18,7 @@ merging_strategy:
   valid_values: ["merging_strategy_union_of_pairwise_intersections", "merging_strategy_kemeny_young"]
 
 num_repeats:
-  value: 5
+  value: 10
   description: "The number of repeats for the pipeline."
   min_value: 2
   max_value: 10
@@ -26,20 +26,20 @@ num_repeats:
 normalize:
   value: True
   description: "Boolean to normalize continous variable."
-  valid_values: ["regression", "classification"]
 
 task:
   value: "classification"
   description: "ML task, either regression or classification"
+  valid_values: ["regression", "classification"]
 
 data_path:
-  value: "/data/input/"
+  value: "/mnt/arthurbabey/Data/"
   description: "The path to the data folder."
 
 result_path:
-  value: "/data/results"
+  value: "../results"
   description: "The path to save the results."
 
 experiment_name:
-  value: "EXP1_TRANSCRIPTOMICS_regression"
+  value: "exp1_pipeline_performance_transcriptomics_classification_500features"
   description: "The file name to save the results."
